--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
     "react": "^18.2.0",
+    "react-animated-weather": "^4.0.1",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "vue-skycons": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
